--- a/.gitignore
+++ b/.gitignore
@@ -1,7 +1,22 @@
-*~
-.*~
-._*
+## MAC OS
 .DS_Store
-.idea
+
+## TEXTMATE
+*.tmproj
+tmtags
+
+## EMACS
+*~
+\#*
+.\#*
+
+## VIM
+*.swp
+
+## PROJECT::GENERAL
+coverage
+rdoc
 pkg
-examples
+
+## PROJECT::SPECIFIC
+samples
